@@ -1,3 +1,6 @@
+JLife v.1.12.1 MILESTONE
+Reorder Code
+
 JLife v.1.12
 Add JLifeToolbar as a iconed JToolbar;
 Remove JLifeLeftControlPanel;
